fix for bug #408443:  Update from Gran Paradiso Alpha 2, Alpha 3, and Alpha 4 -> FF Beta 2 cause [Exception... "Component returned failure code: 0x80004005 (NS_ERROR_FAILURE) [nsIDocShellHistory.useGlobalHistory] if you have a a2,a3,a4 profile and you run a7 (or later), in place migration of places.sqlite will fail, causing problems (such as an empty personal toolbar and lost of history.) r=dietrich, a=beltzner